{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 126,
  "lineage": "fd2afef8-f094-a2e9-7a74-414552f105b3",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_bastion_to_bigtable",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-08-01T08:05:04.340-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ctp-prj-1/global/firewalls/allow-bastion-to-bigtable",
            "log_config": [],
            "name": "allow-bastion-to-bigtable",
            "network": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/global/networks/vpc-fin-ctp-001",
            "priority": 1000,
            "project": "ctp-prj-1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/global/firewalls/allow-bastion-to-bigtable",
            "source_ranges": [
              "10.0.0.2",
              "10.0.0.3"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_instance.bastion_1",
            "google_compute_instance.bastion_2",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_bastion_to_sql",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5432"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-08-01T08:05:04.422-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ctp-prj-1/global/firewalls/allow-bastion-to-sql",
            "log_config": [],
            "name": "allow-bastion-to-sql",
            "network": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/global/networks/vpc-fin-ctp-001",
            "priority": 1000,
            "project": "ctp-prj-1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/global/firewalls/allow-bastion-to-sql",
            "source_ranges": [
              "10.0.0.2",
              "10.0.0.3"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_instance.bastion_1",
            "google_compute_instance.bastion_2",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ingress_from_cloud_run",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-08-01T08:04:20.084-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ctp-prj-1/global/firewalls/allow-ingress-from-cloud-run",
            "log_config": [],
            "name": "allow-ingress-from-cloud-run",
            "network": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/global/networks/vpc-fin-ctp-001",
            "priority": 1000,
            "project": "ctp-prj-1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/global/firewalls/allow-ingress-from-cloud-run",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ingress-controller"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-08-01T08:04:19.959-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ctp-prj-1/global/firewalls/allow-internal",
            "log_config": [],
            "name": "allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/global/networks/vpc-fin-ctp-001",
            "priority": 1000,
            "project": "ctp-prj-1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/global/firewalls/allow-internal",
            "source_ranges": [
              "10.0.0.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-08-01T08:04:20.007-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ctp-prj-1/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/global/networks/vpc-fin-ctp-001",
            "priority": 1000,
            "project": "ctp-prj-1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "spanner_private_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.39.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2024-08-01T08:04:19.948-07:00",
            "id": "projects/ctp-prj-1/global/addresses/ctp-fin-spanner-001-private-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "ctp-fin-spanner-001-private-ip",
            "network": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/global/networks/vpc-fin-ctp-001",
            "prefix_length": 16,
            "project": "ctp-prj-1",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/global/addresses/ctp-fin-spanner-001-private-ip"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "bastion_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20240709",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/zones/us-central1-a/disks/bastion-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/ctp-prj-1/zones/us-central1-a/instances/bastion-1",
            "instance_id": "5717743905299372795",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "ssh-keys": "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQCeb3KMO6Byn6XjpHJQKRbPuFYKXPKTXcOJLtxntWHOxuLl6i6+SN9t/yYPaygWOWnPl9p5L/UchKkFSryiCKCXsQYfakmNJLtuvtpYd09MOu4sgtDYOxCD4vWblHuhBdXpqXx2a175F8gM7sCQYEfRaySjHUsdCEI5SaOJVYqCQSOq5CHc1fVB7SNYTlxFForsNyDObFgiJ7eDAWZa5o8bbkbxxN1WlI5F0YzS+Yiwf938dvAqK2yM9UExg42nEgd/yfZ8IvOzLNEvkESCDXuh0CsnTT6JMBoUHOb1Ts2zbHGFOkq+2G001Sy3FhVAgX3Y9ZfMlBDoNEqqSIVGz7P9 dewakarreddy@google.com"
            },
            "metadata_fingerprint": "op2Mfjikh2E=",
            "name": "bastion-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.29.9.127",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/global/networks/vpc-fin-ctp-001",
                "network_ip": "10.0.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/regions/us-central1/subnetworks/subnet-fin-ctp-001",
                "subnetwork_project": "ctp-prj-1"
              }
            ],
            "project": "ctp-prj-1",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/zones/us-central1-a/instances/bastion-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "bastion_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20240709",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/zones/us-central1-a/disks/bastion-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/ctp-prj-1/zones/us-central1-a/instances/bastion-2",
            "instance_id": "129653164399270652",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "ssh-keys": "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQCeb3KMO6Byn6XjpHJQKRbPuFYKXPKTXcOJLtxntWHOxuLl6i6+SN9t/yYPaygWOWnPl9p5L/UchKkFSryiCKCXsQYfakmNJLtuvtpYd09MOu4sgtDYOxCD4vWblHuhBdXpqXx2a175F8gM7sCQYEfRaySjHUsdCEI5SaOJVYqCQSOq5CHc1fVB7SNYTlxFForsNyDObFgiJ7eDAWZa5o8bbkbxxN1WlI5F0YzS+Yiwf938dvAqK2yM9UExg42nEgd/yfZ8IvOzLNEvkESCDXuh0CsnTT6JMBoUHOb1Ts2zbHGFOkq+2G001Sy3FhVAgX3Y9ZfMlBDoNEqqSIVGz7P9 dewakarreddy@google.com"
            },
            "metadata_fingerprint": "op2Mfjikh2E=",
            "name": "bastion-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.70.108.179",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/global/networks/vpc-fin-ctp-001",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/regions/us-central1/subnetworks/subnet-fin-ctp-001",
                "subnetwork_project": "ctp-prj-1"
              }
            ],
            "project": "ctp-prj-1",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/zones/us-central1-a/instances/bastion-2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/ctp-prj-1/global/networks/vpc-fin-ctp-001",
            "mtu": 0,
            "name": "vpc-fin-ctp-001",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "5277675019210988849",
            "project": "ctp-prj-1",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/global/networks/vpc-fin-ctp-001"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-08-01T08:04:20.048-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/ctp-prj-1/regions/us-central1/subnetworks/subnet-fin-ctp-001",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "subnet-fin-ctp-001",
            "network": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/global/networks/vpc-fin-ctp-001",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "ctp-prj-1",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.1.0.0/16",
                "range_name": "gke-pods"
              },
              {
                "ip_cidr_range": "10.2.0.0/20",
                "range_name": "gke-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/regions/us-central1/subnetworks/subnet-fin-ctp-001",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}